After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768788 - Incorrect account of jsonPath syntax in doc
Incorrect account of jsonPath syntax in doc
Status: RESOLVED FIXED
Product: json-glib
Classification: Core
Component: Documentation
git master
Other Linux
: Normal normal
: ---
Assigned To: json-glib-maint
json-glib-maint
Depends on:
Blocks:
 
 
Reported: 2016-07-13 20:45 UTC by Allin Cottrell
Modified: 2017-03-18 18:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for doc (736 bytes, patch)
2016-07-13 20:45 UTC, Allin Cottrell
committed Details | Review

Description Allin Cottrell 2016-07-13 20:45:25 UTC
Created attachment 331448 [details] [review]
patch for doc

The doc for json-glib misstates the meaning of the jsonPath
set notation operator, as in

$.store.book[0,2]

This does not mean elements 0 to 2 (a range) but rather just
elements 0 and 2.

This is correctly handled in the library; it's just the doc
that is wrong.
Comment 1 Emmanuele Bassi (:ebassi) 2017-03-18 18:45:55 UTC
Thanks for the patch.

Next time it would be much more helpful if you attached a patch generated by `git-format-patch`, or (even better), by git-bz.