docs: Fix array subsets description

The doc for json-glib misstates the meaning of the JsonPath set notation
operator, as in

$.store.book[0,2]

This does not mean elements 0 to 2 (a range) but rather just elements 0
and 2.

This is correctly handled in the library; it's just the doc that is
wrong.

https://bugzilla.gnome.org/show_bug.cgi?id=768788